# batch-nearby-search-mcp

./: .env.example  .gitignore  CLAUDE.md  IMPL_PLAN.md  README.md  pyproject.toml
src/batch_nearby_search/: __init__.py  cache.py  google_client.py  models.py  place_types.py  server.py  tool_docs.py  utils.py
tests/: __init__.py  test_geocoding.py
