[project]
name = "batch-nearby-search-mcp"
version = "0.1.0"
description = "Optimized MCP server for batch nearby searches using Google Places API"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "google-maps-places>=0.5.0",
    "googlemaps>=4.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
batch-nearby-search = "batch_nearby_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch_nearby_search"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
